--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-lio-utils provide a simple low-level configuration tool set for the LIO Linux SCSI Target.
+lio-utils is a Python library that provides a simple low-level configuration
+tool set for the LIO Linux SCSI Target. lio-utils use the configFS kernel API
+that is available with LIO.
 
-lio-utils use the configFS kernel API that is available with LIO, and provides a clean
-interface for controlling the Linux kernel LIO components.
+lio-utils was developed by Datera, Inc. (www.daterainc.com).
 
 For more information, please see:
 
